Created a grid sample
Created a grid sample, added a link to some websites about Cameroon and African dishes, and added multiple pages.

--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,4 +1,5 @@
 .purpletext {font-family: Arial, Helvetica, Sans-Serif;
   color: purple;}
 
-  h1,h4{color: blueviolet;}
+  h1,h4{color: rebeccapurple;}
+  
