--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,10 +1,3 @@
-body { 
-  background-color: purple;
-
-}
-
-
-
 
 
 .purpletext {font-family: Arial, Helvetica, Sans-Serif;
@@ -70,4 +63,140 @@ body {
   background-color: palevioletred;
   color: black;
   
+}
+
+
+body{
+   padding: 0;
+   margin: 0;
+   background-color: burlywood;
+}
+h1{
+    margin-top: 50px;
+    margin-left: 510px;
+    font-size: 60px;
+    font-family: 'karla' sans-serif;
+    font-weight: lighter;
+}
+h4{
+  margin-left: 210;
+  font-size: 25;
+  font-weight: bold;
+}
+p{
+  margin-left: 60px;
+  font-size: 20px;
+  font-weight: lighter;
+}
+
+.slider-frame{
+   overflow: hidden;
+   height: 800px;
+   width: 1200px;
+   margin-left: 200px;
+   margin-top: 80px;
+   margin-bottom: 200;
+}
+
+/*---------SLIDE ANIMATION--------------*/
+
+@keyframes slide_animation {
+  0% {left: 0px;}
+  10% {left: 0px;}
+  20% {left: 1200px;}
+  30% {left: 1200px;}
+  40% {left: 2400px;}
+  50% {left: 2400px;}
+  60% {left: 1200px;}
+  70% {left: 1200px;}
+  80% {left: 1200px;}
+  90% {left: 0px;}
+  100% {left: 0px;}
+}
+
+.slide-images{
+   width: 3600px;
+   height: 800px;
+   margin: 0 0 0 -2400px;
+   position: relative;
+   animation-name: slide_animation;
+   animation-duration: 15s;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
+   animation-play-state: running;
+
+}
+
+.img-container{
+   height: 800px;
+   width: 1200px;
+  float: left;
+  padding: bottom 10px;
+}
+
+/*-----END OF ANIMATION PART-------*/
+
+/* Style the footer with a purple background*/
+
+.footer{
+  width: 100%;
+  position: sticky;
+  bottom: 0;
+}
+
+.footer-content {
+  text-align: center;
+  overflow: auto;
+  background-color:lightcoral;
+  width: 100%;
+  height: 100%;
+  position: sticky;
+  left:0;
+  bottom:0;
+  text-align: center;
+  margin-left: auto;
+}
+.menu-images{
+  padding-bottom: 20px;
+  margin-top: 30px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom:2px;
+}
+
+.menu-list{
+  margin-left: 40px;
+}
+
+.other-services{
+  margin-left: 40px;
+}
+.price-table{
+  margin-left: 200px;
+}
+.login-container{
+  text-align: center;
+  margin-top: 50px;
+  margin-left: 150px;
+  margin-right: 150px;
+  width: 80%;
+  background-color: lightcoral;
+}
+
+.register-container{
+  text-align: center;
+  margin-top: 50px;
+  margin-left: 180px;
+  margin-right: 18S0px;
+  width: 80%;
+  background-color: lightcoral;
+}
+form {
+  color: black;
+  margin-top: 50px;
+  margin-left: 150px;
+  font-size: 25px;
+  font-family: 'karla' sans-serif;
+  font-weight:bolder;
 }
